parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> processo
Rule 2     processo -> KW_PROCESSO ABRE_CHAVE definicoes_processo FECHA_CHAVE
Rule 3     definicoes_processo -> prop_nome prop_dono prop_inicio bloco_atividades prop_fim
Rule 4     prop_nome -> KW_NOME OP_ATRIBUICAO LIT_STRING PONTO_VIRGULA
Rule 5     prop_dono -> KW_DONO OP_ATRIBUICAO LIT_STRING PONTO_VIRGULA
Rule 6     prop_inicio -> KW_INICIO OP_ATRIBUICAO ID_VARIAVEL PONTO_VIRGULA
Rule 7     prop_fim -> KW_FIM OP_ATRIBUICAO LIT_STRING PONTO_VIRGULA
Rule 8     bloco_atividades -> KW_ATIVIDADES ABRE_CHAVE lista_atividades FECHA_CHAVE
Rule 9     lista_atividades -> lista_atividades atividade
Rule 10    lista_atividades -> empty
Rule 11    atividade -> ID_VARIAVEL ABRE_CHAVE lista_propriedades_atividade FECHA_CHAVE
Rule 12    lista_propriedades_atividade -> propriedade_atividade lista_propriedades_atividade
Rule 13    lista_propriedades_atividade -> empty
Rule 14    propriedade_atividade -> prop_nome
Rule 15    propriedade_atividade -> prop_tipo
Rule 16    propriedade_atividade -> prop_responsavel
Rule 17    propriedade_atividade -> prop_tempo
Rule 18    propriedade_atividade -> prop_custo
Rule 19    propriedade_atividade -> prop_seguinte
Rule 20    prop_tipo -> KW_TIPO OP_ATRIBUICAO LIT_STRING PONTO_VIRGULA
Rule 21    prop_responsavel -> KW_RESPONSAVEL OP_ATRIBUICAO LIT_STRING PONTO_VIRGULA
Rule 22    prop_tempo -> KW_TEMPO OP_ATRIBUICAO NUMERO PONTO_VIRGULA
Rule 23    prop_custo -> KW_CUSTO OP_ATRIBUICAO NUMERO PONTO_VIRGULA
Rule 24    prop_seguinte -> KW_SEGUINTE OP_ATRIBUICAO ABRE_CHAVE lista_fluxos FECHA_CHAVE PONTO_VIRGULA
Rule 25    flow_target -> ID_VARIAVEL
Rule 26    flow_target -> KW_FIM
Rule 27    lista_fluxos -> fluxo_condicional lista_fluxos_continua
Rule 28    lista_fluxos -> flow_target
Rule 29    fluxo_condicional -> ID_VARIAVEL SETA flow_target
Rule 30    lista_fluxos_continua -> VIRGULA fluxo_condicional lista_fluxos_continua
Rule 31    lista_fluxos_continua -> empty
Rule 32    empty -> <empty>

Terminals, with rules where they appear

ABRE_CHAVE           : 2 8 11 24
FECHA_CHAVE          : 2 8 11 24
ID_VARIAVEL          : 6 11 25 29
KW_ATIVIDADES        : 8
KW_CUSTO             : 23
KW_DONO              : 5
KW_FIM               : 7 26
KW_INICIO            : 6
KW_NOME              : 4
KW_PROCESSO          : 2
KW_RESPONSAVEL       : 21
KW_SEGUINTE          : 24
KW_TEMPO             : 22
KW_TIPO              : 20
LIT_STRING           : 4 5 7 20 21
NUMERO               : 22 23
OP_ATRIBUICAO        : 4 5 6 7 20 21 22 23 24
PONTO_VIRGULA        : 4 5 6 7 20 21 22 23 24
SETA                 : 29
VIRGULA              : 30
error                : 

Nonterminals, with rules where they appear

atividade            : 9
bloco_atividades     : 3
definicoes_processo  : 2
empty                : 10 13 31
flow_target          : 28 29
fluxo_condicional    : 27 30
lista_atividades     : 8 9
lista_fluxos         : 24
lista_fluxos_continua : 27 30
lista_propriedades_atividade : 11 12
processo             : 1
programa             : 0
prop_custo           : 18
prop_dono            : 3
prop_fim             : 3
prop_inicio          : 3
prop_nome            : 3 14
prop_responsavel     : 16
prop_seguinte        : 19
prop_tempo           : 17
prop_tipo            : 15
propriedade_atividade : 12

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . processo
    (2) processo -> . KW_PROCESSO ABRE_CHAVE definicoes_processo FECHA_CHAVE

    KW_PROCESSO     shift and go to state 3

    programa                       shift and go to state 1
    processo                       shift and go to state 2

state 1

    (0) S' -> programa .



state 2

    (1) programa -> processo .

    $end            reduce using rule 1 (programa -> processo .)


state 3

    (2) processo -> KW_PROCESSO . ABRE_CHAVE definicoes_processo FECHA_CHAVE

    ABRE_CHAVE      shift and go to state 4


state 4

    (2) processo -> KW_PROCESSO ABRE_CHAVE . definicoes_processo FECHA_CHAVE
    (3) definicoes_processo -> . prop_nome prop_dono prop_inicio bloco_atividades prop_fim
    (4) prop_nome -> . KW_NOME OP_ATRIBUICAO LIT_STRING PONTO_VIRGULA

    KW_NOME         shift and go to state 7

    definicoes_processo            shift and go to state 5
    prop_nome                      shift and go to state 6

state 5

    (2) processo -> KW_PROCESSO ABRE_CHAVE definicoes_processo . FECHA_CHAVE

    FECHA_CHAVE     shift and go to state 8


state 6

    (3) definicoes_processo -> prop_nome . prop_dono prop_inicio bloco_atividades prop_fim
    (5) prop_dono -> . KW_DONO OP_ATRIBUICAO LIT_STRING PONTO_VIRGULA

    KW_DONO         shift and go to state 10

    prop_dono                      shift and go to state 9

state 7

    (4) prop_nome -> KW_NOME . OP_ATRIBUICAO LIT_STRING PONTO_VIRGULA

    OP_ATRIBUICAO   shift and go to state 11


state 8

    (2) processo -> KW_PROCESSO ABRE_CHAVE definicoes_processo FECHA_CHAVE .

    $end            reduce using rule 2 (processo -> KW_PROCESSO ABRE_CHAVE definicoes_processo FECHA_CHAVE .)


state 9

    (3) definicoes_processo -> prop_nome prop_dono . prop_inicio bloco_atividades prop_fim
    (6) prop_inicio -> . KW_INICIO OP_ATRIBUICAO ID_VARIAVEL PONTO_VIRGULA

    KW_INICIO       shift and go to state 13

    prop_inicio                    shift and go to state 12

state 10

    (5) prop_dono -> KW_DONO . OP_ATRIBUICAO LIT_STRING PONTO_VIRGULA

    OP_ATRIBUICAO   shift and go to state 14


state 11

    (4) prop_nome -> KW_NOME OP_ATRIBUICAO . LIT_STRING PONTO_VIRGULA

    LIT_STRING      shift and go to state 15


state 12

    (3) definicoes_processo -> prop_nome prop_dono prop_inicio . bloco_atividades prop_fim
    (8) bloco_atividades -> . KW_ATIVIDADES ABRE_CHAVE lista_atividades FECHA_CHAVE

    KW_ATIVIDADES   shift and go to state 17

    bloco_atividades               shift and go to state 16

state 13

    (6) prop_inicio -> KW_INICIO . OP_ATRIBUICAO ID_VARIAVEL PONTO_VIRGULA

    OP_ATRIBUICAO   shift and go to state 18


state 14

    (5) prop_dono -> KW_DONO OP_ATRIBUICAO . LIT_STRING PONTO_VIRGULA

    LIT_STRING      shift and go to state 19


state 15

    (4) prop_nome -> KW_NOME OP_ATRIBUICAO LIT_STRING . PONTO_VIRGULA

    PONTO_VIRGULA   shift and go to state 20


state 16

    (3) definicoes_processo -> prop_nome prop_dono prop_inicio bloco_atividades . prop_fim
    (7) prop_fim -> . KW_FIM OP_ATRIBUICAO LIT_STRING PONTO_VIRGULA

    KW_FIM          shift and go to state 22

    prop_fim                       shift and go to state 21

state 17

    (8) bloco_atividades -> KW_ATIVIDADES . ABRE_CHAVE lista_atividades FECHA_CHAVE

    ABRE_CHAVE      shift and go to state 23


state 18

    (6) prop_inicio -> KW_INICIO OP_ATRIBUICAO . ID_VARIAVEL PONTO_VIRGULA

    ID_VARIAVEL     shift and go to state 24


state 19

    (5) prop_dono -> KW_DONO OP_ATRIBUICAO LIT_STRING . PONTO_VIRGULA

    PONTO_VIRGULA   shift and go to state 25


state 20

    (4) prop_nome -> KW_NOME OP_ATRIBUICAO LIT_STRING PONTO_VIRGULA .

    KW_DONO         reduce using rule 4 (prop_nome -> KW_NOME OP_ATRIBUICAO LIT_STRING PONTO_VIRGULA .)
    KW_NOME         reduce using rule 4 (prop_nome -> KW_NOME OP_ATRIBUICAO LIT_STRING PONTO_VIRGULA .)
    KW_TIPO         reduce using rule 4 (prop_nome -> KW_NOME OP_ATRIBUICAO LIT_STRING PONTO_VIRGULA .)
    KW_RESPONSAVEL  reduce using rule 4 (prop_nome -> KW_NOME OP_ATRIBUICAO LIT_STRING PONTO_VIRGULA .)
    KW_TEMPO        reduce using rule 4 (prop_nome -> KW_NOME OP_ATRIBUICAO LIT_STRING PONTO_VIRGULA .)
    KW_CUSTO        reduce using rule 4 (prop_nome -> KW_NOME OP_ATRIBUICAO LIT_STRING PONTO_VIRGULA .)
    KW_SEGUINTE     reduce using rule 4 (prop_nome -> KW_NOME OP_ATRIBUICAO LIT_STRING PONTO_VIRGULA .)
    FECHA_CHAVE     reduce using rule 4 (prop_nome -> KW_NOME OP_ATRIBUICAO LIT_STRING PONTO_VIRGULA .)


state 21

    (3) definicoes_processo -> prop_nome prop_dono prop_inicio bloco_atividades prop_fim .

    FECHA_CHAVE     reduce using rule 3 (definicoes_processo -> prop_nome prop_dono prop_inicio bloco_atividades prop_fim .)


state 22

    (7) prop_fim -> KW_FIM . OP_ATRIBUICAO LIT_STRING PONTO_VIRGULA

    OP_ATRIBUICAO   shift and go to state 26


state 23

    (8) bloco_atividades -> KW_ATIVIDADES ABRE_CHAVE . lista_atividades FECHA_CHAVE
    (9) lista_atividades -> . lista_atividades atividade
    (10) lista_atividades -> . empty
    (32) empty -> .

    FECHA_CHAVE     reduce using rule 32 (empty -> .)
    ID_VARIAVEL     reduce using rule 32 (empty -> .)

    lista_atividades               shift and go to state 27
    empty                          shift and go to state 28

state 24

    (6) prop_inicio -> KW_INICIO OP_ATRIBUICAO ID_VARIAVEL . PONTO_VIRGULA

    PONTO_VIRGULA   shift and go to state 29


state 25

    (5) prop_dono -> KW_DONO OP_ATRIBUICAO LIT_STRING PONTO_VIRGULA .

    KW_INICIO       reduce using rule 5 (prop_dono -> KW_DONO OP_ATRIBUICAO LIT_STRING PONTO_VIRGULA .)


state 26

    (7) prop_fim -> KW_FIM OP_ATRIBUICAO . LIT_STRING PONTO_VIRGULA

    LIT_STRING      shift and go to state 30


state 27

    (8) bloco_atividades -> KW_ATIVIDADES ABRE_CHAVE lista_atividades . FECHA_CHAVE
    (9) lista_atividades -> lista_atividades . atividade
    (11) atividade -> . ID_VARIAVEL ABRE_CHAVE lista_propriedades_atividade FECHA_CHAVE

    FECHA_CHAVE     shift and go to state 31
    ID_VARIAVEL     shift and go to state 33

    atividade                      shift and go to state 32

state 28

    (10) lista_atividades -> empty .

    FECHA_CHAVE     reduce using rule 10 (lista_atividades -> empty .)
    ID_VARIAVEL     reduce using rule 10 (lista_atividades -> empty .)


state 29

    (6) prop_inicio -> KW_INICIO OP_ATRIBUICAO ID_VARIAVEL PONTO_VIRGULA .

    KW_ATIVIDADES   reduce using rule 6 (prop_inicio -> KW_INICIO OP_ATRIBUICAO ID_VARIAVEL PONTO_VIRGULA .)


state 30

    (7) prop_fim -> KW_FIM OP_ATRIBUICAO LIT_STRING . PONTO_VIRGULA

    PONTO_VIRGULA   shift and go to state 34


state 31

    (8) bloco_atividades -> KW_ATIVIDADES ABRE_CHAVE lista_atividades FECHA_CHAVE .

    KW_FIM          reduce using rule 8 (bloco_atividades -> KW_ATIVIDADES ABRE_CHAVE lista_atividades FECHA_CHAVE .)


state 32

    (9) lista_atividades -> lista_atividades atividade .

    FECHA_CHAVE     reduce using rule 9 (lista_atividades -> lista_atividades atividade .)
    ID_VARIAVEL     reduce using rule 9 (lista_atividades -> lista_atividades atividade .)


state 33

    (11) atividade -> ID_VARIAVEL . ABRE_CHAVE lista_propriedades_atividade FECHA_CHAVE

    ABRE_CHAVE      shift and go to state 35


state 34

    (7) prop_fim -> KW_FIM OP_ATRIBUICAO LIT_STRING PONTO_VIRGULA .

    FECHA_CHAVE     reduce using rule 7 (prop_fim -> KW_FIM OP_ATRIBUICAO LIT_STRING PONTO_VIRGULA .)


state 35

    (11) atividade -> ID_VARIAVEL ABRE_CHAVE . lista_propriedades_atividade FECHA_CHAVE
    (12) lista_propriedades_atividade -> . propriedade_atividade lista_propriedades_atividade
    (13) lista_propriedades_atividade -> . empty
    (14) propriedade_atividade -> . prop_nome
    (15) propriedade_atividade -> . prop_tipo
    (16) propriedade_atividade -> . prop_responsavel
    (17) propriedade_atividade -> . prop_tempo
    (18) propriedade_atividade -> . prop_custo
    (19) propriedade_atividade -> . prop_seguinte
    (32) empty -> .
    (4) prop_nome -> . KW_NOME OP_ATRIBUICAO LIT_STRING PONTO_VIRGULA
    (20) prop_tipo -> . KW_TIPO OP_ATRIBUICAO LIT_STRING PONTO_VIRGULA
    (21) prop_responsavel -> . KW_RESPONSAVEL OP_ATRIBUICAO LIT_STRING PONTO_VIRGULA
    (22) prop_tempo -> . KW_TEMPO OP_ATRIBUICAO NUMERO PONTO_VIRGULA
    (23) prop_custo -> . KW_CUSTO OP_ATRIBUICAO NUMERO PONTO_VIRGULA
    (24) prop_seguinte -> . KW_SEGUINTE OP_ATRIBUICAO ABRE_CHAVE lista_fluxos FECHA_CHAVE PONTO_VIRGULA

    FECHA_CHAVE     reduce using rule 32 (empty -> .)
    KW_NOME         shift and go to state 7
    KW_TIPO         shift and go to state 45
    KW_RESPONSAVEL  shift and go to state 46
    KW_TEMPO        shift and go to state 47
    KW_CUSTO        shift and go to state 48
    KW_SEGUINTE     shift and go to state 49

    lista_propriedades_atividade   shift and go to state 36
    propriedade_atividade          shift and go to state 37
    empty                          shift and go to state 38
    prop_nome                      shift and go to state 39
    prop_tipo                      shift and go to state 40
    prop_responsavel               shift and go to state 41
    prop_tempo                     shift and go to state 42
    prop_custo                     shift and go to state 43
    prop_seguinte                  shift and go to state 44

state 36

    (11) atividade -> ID_VARIAVEL ABRE_CHAVE lista_propriedades_atividade . FECHA_CHAVE

    FECHA_CHAVE     shift and go to state 50


state 37

    (12) lista_propriedades_atividade -> propriedade_atividade . lista_propriedades_atividade
    (12) lista_propriedades_atividade -> . propriedade_atividade lista_propriedades_atividade
    (13) lista_propriedades_atividade -> . empty
    (14) propriedade_atividade -> . prop_nome
    (15) propriedade_atividade -> . prop_tipo
    (16) propriedade_atividade -> . prop_responsavel
    (17) propriedade_atividade -> . prop_tempo
    (18) propriedade_atividade -> . prop_custo
    (19) propriedade_atividade -> . prop_seguinte
    (32) empty -> .
    (4) prop_nome -> . KW_NOME OP_ATRIBUICAO LIT_STRING PONTO_VIRGULA
    (20) prop_tipo -> . KW_TIPO OP_ATRIBUICAO LIT_STRING PONTO_VIRGULA
    (21) prop_responsavel -> . KW_RESPONSAVEL OP_ATRIBUICAO LIT_STRING PONTO_VIRGULA
    (22) prop_tempo -> . KW_TEMPO OP_ATRIBUICAO NUMERO PONTO_VIRGULA
    (23) prop_custo -> . KW_CUSTO OP_ATRIBUICAO NUMERO PONTO_VIRGULA
    (24) prop_seguinte -> . KW_SEGUINTE OP_ATRIBUICAO ABRE_CHAVE lista_fluxos FECHA_CHAVE PONTO_VIRGULA

    FECHA_CHAVE     reduce using rule 32 (empty -> .)
    KW_NOME         shift and go to state 7
    KW_TIPO         shift and go to state 45
    KW_RESPONSAVEL  shift and go to state 46
    KW_TEMPO        shift and go to state 47
    KW_CUSTO        shift and go to state 48
    KW_SEGUINTE     shift and go to state 49

    propriedade_atividade          shift and go to state 37
    lista_propriedades_atividade   shift and go to state 51
    empty                          shift and go to state 38
    prop_nome                      shift and go to state 39
    prop_tipo                      shift and go to state 40
    prop_responsavel               shift and go to state 41
    prop_tempo                     shift and go to state 42
    prop_custo                     shift and go to state 43
    prop_seguinte                  shift and go to state 44

state 38

    (13) lista_propriedades_atividade -> empty .

    FECHA_CHAVE     reduce using rule 13 (lista_propriedades_atividade -> empty .)


state 39

    (14) propriedade_atividade -> prop_nome .

    KW_NOME         reduce using rule 14 (propriedade_atividade -> prop_nome .)
    KW_TIPO         reduce using rule 14 (propriedade_atividade -> prop_nome .)
    KW_RESPONSAVEL  reduce using rule 14 (propriedade_atividade -> prop_nome .)
    KW_TEMPO        reduce using rule 14 (propriedade_atividade -> prop_nome .)
    KW_CUSTO        reduce using rule 14 (propriedade_atividade -> prop_nome .)
    KW_SEGUINTE     reduce using rule 14 (propriedade_atividade -> prop_nome .)
    FECHA_CHAVE     reduce using rule 14 (propriedade_atividade -> prop_nome .)


state 40

    (15) propriedade_atividade -> prop_tipo .

    KW_NOME         reduce using rule 15 (propriedade_atividade -> prop_tipo .)
    KW_TIPO         reduce using rule 15 (propriedade_atividade -> prop_tipo .)
    KW_RESPONSAVEL  reduce using rule 15 (propriedade_atividade -> prop_tipo .)
    KW_TEMPO        reduce using rule 15 (propriedade_atividade -> prop_tipo .)
    KW_CUSTO        reduce using rule 15 (propriedade_atividade -> prop_tipo .)
    KW_SEGUINTE     reduce using rule 15 (propriedade_atividade -> prop_tipo .)
    FECHA_CHAVE     reduce using rule 15 (propriedade_atividade -> prop_tipo .)


state 41

    (16) propriedade_atividade -> prop_responsavel .

    KW_NOME         reduce using rule 16 (propriedade_atividade -> prop_responsavel .)
    KW_TIPO         reduce using rule 16 (propriedade_atividade -> prop_responsavel .)
    KW_RESPONSAVEL  reduce using rule 16 (propriedade_atividade -> prop_responsavel .)
    KW_TEMPO        reduce using rule 16 (propriedade_atividade -> prop_responsavel .)
    KW_CUSTO        reduce using rule 16 (propriedade_atividade -> prop_responsavel .)
    KW_SEGUINTE     reduce using rule 16 (propriedade_atividade -> prop_responsavel .)
    FECHA_CHAVE     reduce using rule 16 (propriedade_atividade -> prop_responsavel .)


state 42

    (17) propriedade_atividade -> prop_tempo .

    KW_NOME         reduce using rule 17 (propriedade_atividade -> prop_tempo .)
    KW_TIPO         reduce using rule 17 (propriedade_atividade -> prop_tempo .)
    KW_RESPONSAVEL  reduce using rule 17 (propriedade_atividade -> prop_tempo .)
    KW_TEMPO        reduce using rule 17 (propriedade_atividade -> prop_tempo .)
    KW_CUSTO        reduce using rule 17 (propriedade_atividade -> prop_tempo .)
    KW_SEGUINTE     reduce using rule 17 (propriedade_atividade -> prop_tempo .)
    FECHA_CHAVE     reduce using rule 17 (propriedade_atividade -> prop_tempo .)


state 43

    (18) propriedade_atividade -> prop_custo .

    KW_NOME         reduce using rule 18 (propriedade_atividade -> prop_custo .)
    KW_TIPO         reduce using rule 18 (propriedade_atividade -> prop_custo .)
    KW_RESPONSAVEL  reduce using rule 18 (propriedade_atividade -> prop_custo .)
    KW_TEMPO        reduce using rule 18 (propriedade_atividade -> prop_custo .)
    KW_CUSTO        reduce using rule 18 (propriedade_atividade -> prop_custo .)
    KW_SEGUINTE     reduce using rule 18 (propriedade_atividade -> prop_custo .)
    FECHA_CHAVE     reduce using rule 18 (propriedade_atividade -> prop_custo .)


state 44

    (19) propriedade_atividade -> prop_seguinte .

    KW_NOME         reduce using rule 19 (propriedade_atividade -> prop_seguinte .)
    KW_TIPO         reduce using rule 19 (propriedade_atividade -> prop_seguinte .)
    KW_RESPONSAVEL  reduce using rule 19 (propriedade_atividade -> prop_seguinte .)
    KW_TEMPO        reduce using rule 19 (propriedade_atividade -> prop_seguinte .)
    KW_CUSTO        reduce using rule 19 (propriedade_atividade -> prop_seguinte .)
    KW_SEGUINTE     reduce using rule 19 (propriedade_atividade -> prop_seguinte .)
    FECHA_CHAVE     reduce using rule 19 (propriedade_atividade -> prop_seguinte .)


state 45

    (20) prop_tipo -> KW_TIPO . OP_ATRIBUICAO LIT_STRING PONTO_VIRGULA

    OP_ATRIBUICAO   shift and go to state 52


state 46

    (21) prop_responsavel -> KW_RESPONSAVEL . OP_ATRIBUICAO LIT_STRING PONTO_VIRGULA

    OP_ATRIBUICAO   shift and go to state 53


state 47

    (22) prop_tempo -> KW_TEMPO . OP_ATRIBUICAO NUMERO PONTO_VIRGULA

    OP_ATRIBUICAO   shift and go to state 54


state 48

    (23) prop_custo -> KW_CUSTO . OP_ATRIBUICAO NUMERO PONTO_VIRGULA

    OP_ATRIBUICAO   shift and go to state 55


state 49

    (24) prop_seguinte -> KW_SEGUINTE . OP_ATRIBUICAO ABRE_CHAVE lista_fluxos FECHA_CHAVE PONTO_VIRGULA

    OP_ATRIBUICAO   shift and go to state 56


state 50

    (11) atividade -> ID_VARIAVEL ABRE_CHAVE lista_propriedades_atividade FECHA_CHAVE .

    FECHA_CHAVE     reduce using rule 11 (atividade -> ID_VARIAVEL ABRE_CHAVE lista_propriedades_atividade FECHA_CHAVE .)
    ID_VARIAVEL     reduce using rule 11 (atividade -> ID_VARIAVEL ABRE_CHAVE lista_propriedades_atividade FECHA_CHAVE .)


state 51

    (12) lista_propriedades_atividade -> propriedade_atividade lista_propriedades_atividade .

    FECHA_CHAVE     reduce using rule 12 (lista_propriedades_atividade -> propriedade_atividade lista_propriedades_atividade .)


state 52

    (20) prop_tipo -> KW_TIPO OP_ATRIBUICAO . LIT_STRING PONTO_VIRGULA

    LIT_STRING      shift and go to state 57


state 53

    (21) prop_responsavel -> KW_RESPONSAVEL OP_ATRIBUICAO . LIT_STRING PONTO_VIRGULA

    LIT_STRING      shift and go to state 58


state 54

    (22) prop_tempo -> KW_TEMPO OP_ATRIBUICAO . NUMERO PONTO_VIRGULA

    NUMERO          shift and go to state 59


state 55

    (23) prop_custo -> KW_CUSTO OP_ATRIBUICAO . NUMERO PONTO_VIRGULA

    NUMERO          shift and go to state 60


state 56

    (24) prop_seguinte -> KW_SEGUINTE OP_ATRIBUICAO . ABRE_CHAVE lista_fluxos FECHA_CHAVE PONTO_VIRGULA

    ABRE_CHAVE      shift and go to state 61


state 57

    (20) prop_tipo -> KW_TIPO OP_ATRIBUICAO LIT_STRING . PONTO_VIRGULA

    PONTO_VIRGULA   shift and go to state 62


state 58

    (21) prop_responsavel -> KW_RESPONSAVEL OP_ATRIBUICAO LIT_STRING . PONTO_VIRGULA

    PONTO_VIRGULA   shift and go to state 63


state 59

    (22) prop_tempo -> KW_TEMPO OP_ATRIBUICAO NUMERO . PONTO_VIRGULA

    PONTO_VIRGULA   shift and go to state 64


state 60

    (23) prop_custo -> KW_CUSTO OP_ATRIBUICAO NUMERO . PONTO_VIRGULA

    PONTO_VIRGULA   shift and go to state 65


state 61

    (24) prop_seguinte -> KW_SEGUINTE OP_ATRIBUICAO ABRE_CHAVE . lista_fluxos FECHA_CHAVE PONTO_VIRGULA
    (27) lista_fluxos -> . fluxo_condicional lista_fluxos_continua
    (28) lista_fluxos -> . flow_target
    (29) fluxo_condicional -> . ID_VARIAVEL SETA flow_target
    (25) flow_target -> . ID_VARIAVEL
    (26) flow_target -> . KW_FIM

    ID_VARIAVEL     shift and go to state 69
    KW_FIM          shift and go to state 70

    lista_fluxos                   shift and go to state 66
    fluxo_condicional              shift and go to state 67
    flow_target                    shift and go to state 68

state 62

    (20) prop_tipo -> KW_TIPO OP_ATRIBUICAO LIT_STRING PONTO_VIRGULA .
